# enterprise-voice-rag

./: README.md  pyproject.toml  requirements.txt
Backend/: back_server.py
Frontend/: front_server.py
data/company_files/: api_documentation.txt  api_error.text  api_service.txt  api_usage.txt  attendence_policy.txt  code_of_conduct.txt  confusing_behavior.txt  deployment_model.txt  dev.txt  dev_all(known_bug).txt  edge_case.txt  employee_benifits_policy.txt  engineering_standup.txt  failure_recovery.txt  feature.txt  general_product_faq.txt  incident_review.txt  internal_arc.txt  internal_bug.txt  internal_debate.txt  internal_hr_faq.txt  internal_team.txt  internel_dev_note.txt  known_limits.txt  leave_policy.txt  leave_policy_upgrade.txt  logging_monitoring.txt  mixed_content_faq.txt  mixed_topic_chats.txt  model_deployement_guide.txt  model_deployment_faliure.txt  model_serving_arc.txt  noisy.txt  price_&_planning.txt  pricing_confusion.txt  pricing_planning.txt  product_dev.txt  product_overview.txt  product_stratergy.txt  rag_pipeline_arc.txt  (+8 more)
data/vector_database/: chroma.sqlite3
pipeline/: agents.py  data_ingestion.py  embedding_manager.py  logger.py  retriever.py  vector_db.py
